Bug 514322 - Message says GnuPG Config Module is provided by Kleopatra but it's in KDE PIM Addons
Summary: Message says GnuPG Config Module is provided by Kleopatra but it's in KDE PIM...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: crypto (other bugs)
Version First Reported In: 6.6.0 (25.12.0)
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-08 13:10 UTC by Paul Worrall
Modified: 2026-01-08 15:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments
Error message (27.92 KB, image/png)
2026-01-08 13:10 UTC, Paul Worrall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2026-01-08 13:10:58 UTC
Created attachment 188317 [details]
Error message

SUMMARY
When trying to launch the GPG configure module from KMail's settings page, a message says it's provided by Kleopatra, but installing Kleopatra makes no difference.  I had to install kdepim-addons to make it work.

STEPS TO REPRODUCE
1. On a system that has kleopatra installed and working, but does not have kdepim-addons, launch kmail
2. On the Settings => Security Page, Encryption tab, click "GnuPG Settings..."

OBSERVED RESULT
A "GnuPG Configure Module Error" message is displayed saying the required module is provided by Kleopatra

EXPECTED RESULT
A "GnuPG Configure Module Error" message is displayed saying the required module is provided by kdepim-addons

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Graphics Platform: Wayland
Comment 1 Laurent Montel 2026-01-08 15:05:31 UTC
Git commit 268b864cc5de380c60506cb54f877c497079c59f by Laurent Montel.
Committed on 08/01/2026 at 13:47.
Pushed by mlaurent into branch 'master'.

Fix bug  Message says GnuPG Config Module is provided by Kleopatra but it's in KDE PIM Addons
FIXED-IN: 6.7.0

M  +2    -1    src/configuredialog/configuresecuritypage.cpp

https://invent.kde.org/pim/kmail/-/commit/268b864cc5de380c60506cb54f877c497079c59f