Fix bug  Message says GnuPG Config Module is provided by Kleopatra but it's in KDE PIM Addons

BUG: 514322
FIXED-IN: 6.7.0